# local-hub-skill

./: .gitignore  README.md  pyproject.toml  pytest.ini
.ccweb/: project.json
.ccweb/information/0f45dd13-139b-4788-9756-e965ab8bc6f3/: meta.json  v0.md
.claude-plugin/: marketplace.json
plugins/local-data-hub/.claude-plugin/: plugin.json
plugins/local-data-hub/commands/: add-root.md
plugins/local-data-hub/skills/local-data-hub/: SKILL.md
plugins/local-data-hub/skills/local-data-hub/references/: cli-reference.md  metadata-schema.md
skill/: SKILL.md
skill/scripts/: install-hub.sh
src/hub/: __init__.py  __main__.py  atomic.py  cache.py  config.py  downloader.py  index.py  locks.py  metadata.py  paths.py  remote.py  script_runner.py  validators.py
src/hub/verbs/: add_version.py  pull.py  reads.py  writes.py
tests/: conftest.py
tests/integration/: conftest.py  test_concurrency.py  test_smoke.py
tests/unit/: test_atomic.py  test_cache.py  test_config.py  test_downloader.py  test_index.py  test_install_hub.py  test_locks.py  test_metadata.py  test_paths.py  test_plugin_structure.py  test_remote.py  test_script_runner.py  test_validators.py  test_verb_add.py  test_verb_add_version.py  test_verb_download.py  test_verb_import_file.py  test_verb_pull.py  test_verb_reindex.py  test_verb_rm.py  test_verb_verify.py  test_verbs_reads.py
