[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hub-cli"
version = "0.1.1"
description = "Local/LAN open-source dataset ledger CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "pyyaml>=6,<7",
    "filelock>=3.12,<4",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-timeout>=2,<3",
]

[project.scripts]
hub = "hub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
